# agentic-security

./: .dockerignore  .env.example  .gitignore  Dockerfile  nixpacks.toml  pyproject.toml  railway.toml  render.yaml  requirements.txt  start.sh  start_local_llm.bat  start_local_llm.sh
agentic_security/: __init__.py  __main__.py
agentic_security/agentshield/: __init__.py  analyzer.py  behavior.py  console.py  content_guard.py  redteam.py  tool_guard.py
agentic_security/api/: auth.py  db.py  notifications.py  otp.py  server.py
agentic_security/llm/: __init__.py  corpus.py  engine.py  guard_graph.py  hybrid_layer.py  model.py  qwen_judge.py  serve.py  tokenizer.py  train.py  train_separate.py
agentic_security/shield/: __init__.py  detector.py  gateway.py  guardrails.py  providers.py  proxy.py  sanitizer.py
tests/: test_api.py  test_auth.py
web/: 404.html  docs.html  index.html  landing.html  login.html
