[project]
name = "agentic-security"
version = "0.1.0"
description = "Agentic LLM vulnerability scanner aggregator with an MCP server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
multimodal = ["Pillow>=10.0"]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.40"]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
agentic-security = "agentic_security.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
